<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pramod.courseconnect.fragments.IntroFragmentCalendar"
    android:gravity="top|center"
    android:orientation="vertical"
    android:background="@mipmap/calendar">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/calendar"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/save_doc_msg" />

        <TextView
            android:layout_marginTop="100sp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/grant_permission_msg" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textSize="15sp"
            android:text="@string/grant_permission"
            android:id="@+id/grantCalendarPermission"/>

</LinearLayout>
