<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:scrollbars="none">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fcfcfc"
    android:gravity="center"
    android:id="@+id/ll">
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/cameraCardId"
            android:layout_width="160sp"
            android:layout_height="190sp"
            android:layout_margin="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64sp"
                    android:layout_height="64sp"
                    android:background="@drawable/circle_background_green"
                    android:src="@drawable/ic_camera_black_24dp"
                    android:padding="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp"
                    android:text="@string/camera"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/lightGray"
                    android:layout_margin="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/camera_msg"
                    android:padding="5sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/voiceRecordCardId"
            android:layout_width="160sp"
            android:layout_height="190sp"
            android:layout_margin="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64sp"
                    android:layout_height="64sp"
                    android:background="@drawable/circle_background_purple"
                    android:src="@drawable/ic_record_voice_over_black_24dp"
                    android:padding="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp"
                    android:text="@string/voice_record"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/lightGray"
                    android:layout_margin="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/voice_record_msg"
                    android:padding="5sp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/notesCardId"
            android:layout_width="160sp"
            android:layout_height="190sp"
            android:layout_margin="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64sp"
                    android:layout_height="64sp"
                    android:background="@drawable/circle_background_pinkish"
                    android:src="@drawable/ic_speaker_notes_black_24dp"
                    android:padding="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp"
                    android:text="@string/notes"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/lightGray"
                    android:layout_margin="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/notes_msg"
                    android:padding="5sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/remindersCardId"
            android:layout_width="160sp"
            android:layout_height="190sp"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64sp"
                    android:layout_height="64sp"
                    android:background="@drawable/circle_background_yellow"
                    android:padding="10sp"
                    android:src="@drawable/ic_reminder_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/reminders"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_margin="10sp"
                    android:background="@color/lightGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/reminders_msg"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
</ScrollView>
